[gd_scene load_steps=5 format=3 uid="uid://tg8emhgi8een"]

[ext_resource type="Script" path="res://ui/menu_main.gd" id="1_ecuul"]
[ext_resource type="Texture2D" uid="uid://y6npssa3umbx" path="res://assets/sunset.jpg" id="2_h6o82"]
[ext_resource type="Theme" uid="uid://bhk63fxawy7ix" path="res://styles/btch_theme.tres" id="3_15c4f"]

[sub_resource type="SystemFont" id="SystemFont_0tx4f"]
font_names = PackedStringArray("Arial")

[node name="MenuMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ecuul")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_h6o82")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 25

[node name="TitleMarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_top = 25
theme_override_constants/margin_bottom = 25

[node name="Label" type="Label" parent="MarginContainer/TitleMarginContainer"]
layout_mode = 2
theme = ExtResource("3_15c4f")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 64
text = "BATTLECHESS
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 15
alignment = 1

[node name="ErrorLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0, 0.113725, 1)
theme_override_font_sizes/font_size = 14
text = "placeholder error"

[node name="UsernameLineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_stretch_ratio = 1.2
theme = ExtResource("3_15c4f")
placeholder_text = "username"

[node name="PasswordLineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_stretch_ratio = 1.2
theme = ExtResource("3_15c4f")
placeholder_text = "password"
secret = true

[node name="Separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 26)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("SystemFont_0tx4f")
theme_override_font_sizes/font_size = 18
text = "Login"

[node name="SignUp" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 26)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("SystemFont_0tx4f")
theme_override_font_sizes/font_size = 14
text = "Sign Up"

[node name="ExitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 26)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("SystemFont_0tx4f")
theme_override_font_sizes/font_size = 14
text = "Exit Game"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/SignUp" to="." method="_on_sign_up_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
